--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
 	"author": {
-		"name": "Patrik Simek",
-		"url": "https://patriksimek.cz"
+		"name": "Simon Germain",
+		"url": "https://github.com/sgermain06"
 	},
-	"name": "mssql",
-	"description": "An easy-to-use MSSQL database connector for Node.js.",
+	"contributors": [
+		"Patrik Simek (https://patriksimek.cz)"
+	],
+	"name": "mssql-tedious-int64",
+	"description": "An easy-to-use MSSQL database connector for Node.js. Using int64-native Tedious driver",
 	"keywords": [
 		"database",
 		"mssql",
@@ -14,6 +17,9 @@
 		"tds",
 		"node-tds",
 		"tedious",
+		"tedious-int64",
+		"int64",
+		"int64-native",
 		"node-sqlserver",
 		"sqlserver"
 	],
@@ -25,7 +31,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"tedious": "^1.11.0",
+		"tedious-int64-native": "^1.12.0",
 		"generic-pool": "^2.2.0",
 		"promise": "^7.0.1"
 	},
@@ -34,7 +40,7 @@
 		"mocha": "^2.1.0"
 	},
 	"engines": {
-		"node": ">=0.10"
+		"node": ">=0.12"
 	},
 	"scripts": {
 		"prepublish": "node_modules/.bin/coffee --compile --output ./lib ./src",
